# open-fairprune

./: .gitignore  LICENSE  README.md  data_exploration.py  install-datawig.bat  install.bat  mse.txt  pyproject.toml
data/: Sample_Submission.csv  data.columns.pt  data_exploration.py  dev_group.pt  dev_label.pt  mcc_odds.csv  mse.txt  test_group.pt  test_label.pt  train_group.pt  train_label.pt
data/mlruns/0/: meta.yaml
data/mlruns/0/02ed699018024883996429415ea888ec/: meta.yaml
data/mlruns/0/05cd740a142e4782bd730bf5cc985aeb/: meta.yaml
data/mlruns/0/08a5ecfcb09b4ee9a9eaf8a1065198e0/: meta.yaml
data/mlruns/0/0ed03075cb15423292dddd52c4c278a9/: meta.yaml
data/mlruns/0/12b2463e1e6a4dc0bd954db1d96a7102/: meta.yaml
data/mlruns/0/167dc0f5613b4445b47631abd27d466b/: meta.yaml
data/mlruns/0/18b2a958b34f4b51907a85a8af3349f4/: meta.yaml
data/mlruns/0/20f49eb41bc44adbafbfd51c12e6dd4f/: meta.yaml
data/mlruns/0/2379edfc4f094056a715480535caf837/: meta.yaml
data/mlruns/0/28118533c22c45adb91b304598d5823f/: meta.yaml
data/mlruns/0/2c715273233944bc90ddb699ec80294a/: meta.yaml
data/mlruns/0/2eaeefae206c4ed588ff6959effbe4df/: meta.yaml
data/mlruns/0/35be9bf261e5470584f44e386441411e/: meta.yaml
data/mlruns/0/36aa9a5794cc45bca12c5c17c2fc7ec3/: meta.yaml
src/: explore_dataset.ipynb
src/open_fairprune/: __init__.py  data_exploration.py  data_util.py  eval_model.py  explore_results.ipynb  fairprune.py  fairprune_hyperparameter_search.json  imputer.py  saliency.py  shap.py  shap_explainer.py  simple_nn.py  train.py
(+1060 files in other folders)
