[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "open_fairprune"
version = "0.0.0"
description = "An implementation of the FairPrune paper https://arxiv.org/abs/2203.02110"
requires-python = ">=3.10"
authors = [
  { name = "Christoffer Sommerlund", email = "chriso-99@hotmail.com" },
]
dependencies = [
  "pip>=23",
  "torch==1.13.1+cu117",
  "torchvision==0.14.1+cu117",
  "backpack-for-pytorch",
  "tabulate",
  "torchmetrics",
  "mlflow",
  "click",
  "scikit-learn",
  "pandas",
  "holoviews",
  "hvplot"
]

[tool.black]
target-version = ["py310"]
line-length = 120

[project.scripts]
train-prune = "open_fairprune.train:init_cli"

[tool.setuptools.package-data]
# open_fairprune = ["data/img.png"]